# gn-agent

./: .gitignore  LICENSE  README.md  demo.py  fetch_metadata.py  pyproject.toml  rag_langchain.py  rag_langgraph.py  rag_script.py  rag_template.txt  requirements.txt  retriever_template.txt  summary_template.txt
examples/: examples.csv
src/: agent.py
src/agent/: agent.py  config.py  prompts.py  query.py
src/agent_system/: agent.py  config.py  config.sh  prompts.py  question.py  rag_langgraph.py
src/api/: agent.py  app.py
src/api/fastapi_gnagent/: gnagent.py
src/api/flask_gnagent/: gnagent.py
src/gnagent/: .keys  agent.py  config.py  config.sh  prompts.py  query.py
src/gnagent2/: adapter.py  agent.py  agent2.py  all_config.py  config2.py  evaluate.py  gnagent_adapter.py  optimize.py  optimize_metric.py  optimize_program.py  query.py
src/gnagent2/examples/: analyze_prompt.csv  examples.csv  finalize_prompt.csv  general.csv  plan_prompt.csv  refl_prompt.csv  rephrase_prompt.csv  split_prompt.csv  sup_prompt1.csv  sup_prompt2.csv  test.csv
src/gnopt/: adapter.py  agent.py  evaluate.py  optimize.py
src/gnopt/examples/finemapping/: original.csv
src/gnsmart/: agent.py  config.py  prompts.py
src/initial_rag/: rag_langchain.py  rag_template.txt  retriever_template.txt  summary_template.txt  templates.py
tests/: test_agent.py  test_config.py  test_query.py
utils/: extract_pubmeds.py  fetch_metadata.py  rdf2partial_text.py  set_db.py
