[project]
name = "gnagent"
version = "0.1.0"
description = "An agent for GeneNetwork"
authors = [
    {name = "Johannes Medagbe"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (==0.3.26)",
    "langchain-community (==0.3.27)",
    "langchain-core (==0.3.74)",
    "langgraph (==0.6.4)",
    "pydantic (==2.11.7)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.14.0)",
    "dspy (==3.0.3)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.120.3,<0.121.0)",
    "sparqlwrapper (==2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "chromadb (>=1.3.0,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)"
]

packages = [{include = "gnagent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
