[project]
name = "gnagent"
version = "0.1.0"
description = "An agent for GeneNetwork"
authors = [
    {name = "Johannes Medagbe"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain (==1.2.10)",
    "langchain-community (==0.4.1)",
    "langchain-core (==1.2.17)",
    "langgraph (==1.0.10)",
    "pydantic (==2.11.7)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.14.0)",
    "dspy (==3.0.3)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sparqlwrapper (==2.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "chromadb (>=1.5.2,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "biopython (>=1.86,<2.0)",
]

packages = [{include = "gnagent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
